# dreamerv3

./: .gitignore  README.md  pyproject.toml  sorry.py
dreamer/: distributions.py  ema.py  furuta_neural_sim.py  networks.py  replay_buffer.py  utils.py  wrappers.py
dreamer/envs/: lightupbutton.py
minidream/: dist.py  distributions.py  ema.py  functional.py  furuta_neural_sim.py  networks.py  rb.py  rssm.py  utils.py  wrappers.py
minidream/envs/: andy.py  test_envs.py
notebooks/: make_score_plots.ipynb
scripts/: collect_data.py  inference.py  play_robot.py  replay_mcap.py  train.py  train_ac.py  train_rssm.py
scripts/configs/: collect_data.yaml  play.yaml  train.yaml  train_rssm.yaml
scripts/configs/env/: atari.yaml  breakout.yaml  cartpole.yaml  minatar_breakout.yaml  minatar_space_invaders.yaml  neural_sim.yaml  pacman.yaml  pong.yaml  sim.yaml
scripts/configs/env/dyn/: tiny.yaml
scripts/configs/env/wrappers/: atari.yaml  furuta.yaml  minatar.yaml
scripts/configs/experiment/: efficient_cartpole.yaml
scripts/configs/wrappers/: default.yaml
tests/: test_actor_critic_training.py  test_functionnal.py  test_lines.py  test_replay_buffer.py
