[tool.poetry]
name = "dreamer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pre-commit = "^3.6.0"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
torch = "2.2.1"
wandb = "^0.16.2"
einops = "^0.7.0"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}
furuta = {git = "https://github.com/Armandpl/furuta", rev="ca89f4c"}
hydra-core = "^1.3.2"
pygame = "^2.5.2"
torchrl = "^0.3.0"
matplotlib = "^3.8.2"
pytest = "^8.0.1"
minatar = "^1.0.15"
opencv-python = "^4.9.0.80"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
